Namespaces/Namespaces_communicated_isolation_demo/create_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test1
---
apiVersion: v1
kind: Namespace
metadata:
  name: test2
---
apiVersion: v1
kind: Namespace
metadata:
  name: test3
