Namespaces/Namespaces_communicated_isolation_demo/network_policy_test3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: test3
spec:
  podSelector: {}  # Applies to all pods in test3
  policyTypes:
    - Ingress
    - Egress
